--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
 asgiref==3.8.1
+attrs==25.1.0
+autobahn==24.4.2
+Automat==24.8.1
+cffi==1.17.1
+channels==4.2.0
+constantly==23.10.4
+cryptography==44.0.2
 Cython==3.0.12
+daphne==4.1.2
 Django==5.1
 django-crontab==0.7.1
 djangorestframework==3.15.2
 filelock==3.17.0
 fsspec==2025.2.0
+hyperlink==21.0.0
+idna==3.10
 imageio==2.37.0
+incremental==24.7.2
 Jinja2==3.1.5
 lazy_loader==0.4
 MarkupSafe==3.0.2
@@ -32,14 +43,19 @@ opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 packaging==24.2
 pillow==11.1.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pyclipper==1.3.0.post6
+pycparser==2.22
 PyJWT==2.10.1
+pyOpenSSL==25.0.0
 pytesseract==0.3.13
 python-bidi==0.6.6
 python-dotenv==1.0.1
 PyYAML==6.0.2
 scikit-image==0.25.2
 scipy==1.15.2
+service-identity==24.2.0
 shapely==2.0.7
 sqlparse==0.5.1
 sympy==1.13.1
@@ -47,5 +63,8 @@ tifffile==2025.2.18
 torch==2.6.0
 torchvision==0.21.0
 triton==3.2.0
+Twisted==24.11.0
+txaio==23.1.1
 typing_extensions==4.12.2
 whitenoise==6.7.0
+zope.interface==7.2
